Use dirty trick to fix Safari align-items problem of hover-mask

--- a/recruit/sass/style.scss
+++ b/recruit/sass/style.scss
@@ -788,10 +788,9 @@ $pattern-background-size: 25em;
             right: 0;
             padding-left: 1em;
             padding-right: 1em;
+            padding-top: 2em;
             opacity: 0;
             transition: opacity 200ms linear;
-            display: flex;
-            align-items: center;
             margin: 0;
 
         }
